<resources>

    <string name="app_name">CADsystem</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">CADSystem</string>
    <string name="ProjectSelection">Select a project:</string>
    <string name="CreateProject">New</string>
    <string name="ExistingProject">Existing</string>
    <string name="title_activity_contact">Contact</string>
    <string name="title_activity_house_or_plot">HouseOrPlot</string>
    <string name="HouseOrPlot">Start with creating the:</string>
    <string name="House">House</string>
    <string name="Plot">Plot</string>
    <string name="ContactInfo">Contact Information</string>
    <string name="LastName">Last Name:</string>
    <string name="FirstName">First Name:</string>
    <string name="Street">Street Address:</string>
    <string name="Email">E-mail</string>
    <string name="City">City:</string>
    <string name="State">State:</string>
    <string name="ZipCode">ZipCode</string>
    <string name="PhoneNumber">Phone Number:</string>
    <string name="submit">Add Contact</string>
    <string name="title_activity_test">Test</string>
    <string name="title_activity_plot_details">PlotDetails</string>
    <string name="length">Enter Max Length</string>
    <string name="width">Enter Max Width</string>
    <string name="ok">OK</string>
    <string name="title_activity_main_design">MainDesign</string>
    <string name="title_activity_home_screen">CADsystem</string>
    <string name="title_activity_existing">ExistingActivity</string>

</resources>