<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical" >

    <TextView
        android:id="@+id/ContactInformation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="82dp"
        android:text="@string/ContactInfo"
        tools:context=".Contact" />

    <TextView
        android:id="@+id/LastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/ContactInformation"
        android:layout_marginTop="23dp"
        android:text="@string/LastName" />

    <TextView
        android:id="@+id/FirstName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/LastName"
        android:layout_marginTop="18dp"
        android:text="@string/FirstName" />

    <TextView
        android:id="@+id/Email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/FirstName"
        android:layout_marginTop="16dp"
        android:text="@string/Email" />

    <TextView
        android:id="@+id/PhoneNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/Email"
        android:layout_marginTop="17dp"
        android:text="@string/PhoneNumber" />

    <TextView
        android:id="@+id/Street"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/PhoneNumber"
        android:layout_marginTop="22dp"
        android:text="@string/Street" />

    <TextView
        android:id="@+id/City"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/PhoneNumber"
        android:layout_below="@+id/Street"
        android:layout_marginTop="45dp"
        android:text="@string/City" />

    <TextView
        android:id="@+id/State"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/City"
        android:layout_marginTop="46dp"
        android:text="@string/State" />

    <TextView
        android:id="@+id/ZipCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/State"
        android:layout_marginTop="37dp"
        android:text="@string/ZipCode" />

    <EditText
        android:id="@+id/lastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/FirstName"
        android:layout_alignParentRight="true"
        android:ems="10"
        android:inputType="textNoSuggestions" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/firstName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/FirstName"
        android:layout_alignParentRight="true"
        android:ems="10"
        android:inputType="textNoSuggestions" />

    <EditText
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/Email"
        android:layout_alignParentRight="true"
        android:ems="10"
        android:inputType="textEmailAddress|textWebEmailAddress" />

    <EditText
        android:id="@+id/phoneNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/PhoneNumber"
        android:layout_alignParentRight="true"
        android:ems="10"
        android:inputType="number|phone" />

    <EditText
        android:id="@+id/street"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/City"
        android:layout_alignParentRight="true"
        android:ems="10"
        android:inputType="textNoSuggestions" />

    <EditText
        android:id="@+id/city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/City"
        android:layout_alignParentRight="true"
        android:ems="10"
        android:inputType="textNoSuggestions" />

    <EditText
        android:id="@+id/state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/State"
        android:layout_alignParentRight="true"
        android:ems="10"
        android:inputType="textNoSuggestions" />

    <EditText
        android:id="@+id/zipCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/ZipCode"
        android:layout_alignParentRight="true"
        android:ems="10"
        android:inputType="textNoSuggestions" />

    <Button
        android:id="@+id/submitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/zipCode"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="21dp"
        android:text="@string/submit" />

</RelativeLayout>
