<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/ProjectSelectionPrompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/ProjectSelection"
        tools:context=".MainActivity" />

    <Button
        android:id="@+id/NewProject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/ProjectSelectionPrompt"
        android:layout_alignRight="@+id/ProjectSelectionPrompt"
        android:layout_below="@+id/ProjectSelectionPrompt"
        android:layout_marginTop="88dp"
        android:text="@string/CreateProject" />

    <Button
        android:id="@+id/ExistingProject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/NewProject"
        android:layout_alignRight="@+id/NewProject"
        android:layout_below="@+id/NewProject"
        android:layout_marginTop="59dp"
        android:text="@string/ExistingProject" />

</RelativeLayout>
