<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/lengthTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="67dp"
        android:text="@string/length"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/widthTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/lengthTextView"
        android:layout_marginTop="32dp"
        android:text="@string/width"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/lengthEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/lengthTextView"
        android:layout_alignBottom="@+id/lengthTextView"
        android:layout_alignLeft="@+id/widthEditText"
        android:layout_alignParentRight="true"
        android:ems="10"
        android:inputType="number" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/widthEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/widthTextView"
        android:layout_alignBottom="@+id/widthTextView"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/lengthTextView"
        android:ems="10"
        android:inputType="number" />

    <Button
        android:id="@+id/okButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/ok" />

</RelativeLayout>
